--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ ignore:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 #theme: landscape
-theme: cactus
+theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
