--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Zhe
 subtitle: 'Unstable Correlation'
-description: 'Things are corrlated'
+description: 'Things are correlated'
 keywords:
 author: Zhe
 language: en
