--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -567,7 +567,7 @@ comments:
   style: tabs
   # Choose a comment system to be displayed by default.
   # Available values: changyan | disqus | disqusjs | gitalk | livere | valine
-  active:
+  active: disqus
   # Setting `true` means remembering the comment system selected by the visitor.
   storage: true
   # Lazyload all comment systems.
@@ -583,7 +583,7 @@ comments:
 # Disqus
 disqus:
   enable: true
-  shortname:
+  shortname: wangzhe
   count: true
   #post_meta_order: 0
 
