--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/themes/next"]
-	path = themes/themes/next
+[submodule "/themes/next"]
+	path = /themes/next
 	url = https://github.com/theme-next/hexo-theme-next
