--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -100,8 +100,8 @@ creative_commons:
 # Schemes
 #scheme: Muse
 #scheme: Mist
-scheme: Pisces
-#scheme: Gemini
+# scheme: Pisces
+scheme: Gemini
 
 # Dark Mode
 darkmode: true 
