--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -106,6 +106,11 @@ scheme: Gemini
 # Dark Mode
 darkmode: true 
 
+# Automatically Excerpt. Not recommand.
+# Please use <!-- more --> in the post to control excerpt accurately.
+auto_excerpt:
+  enable: false
+  length: 150
 
 # ---------------------------------------------------------------
 # Menu Settings
