--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -504,7 +504,7 @@ math:
 
   # hexo-renderer-pandoc (or hexo-renderer-kramed) required for full MathJax support.
   mathjax:
-    enable: false
+    enable: true 
     # See: https://mhchem.github.io/MathJax-mhchem/
     mhchem: false
 
