--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -187,7 +187,7 @@ social:
   Google: https://scholar.google.co.uk/citations?hl=en&user=6yOk010AAAAJ || google
   #Twitter: https://twitter.com/yourname || twitter
   #FB Page: https://www.facebook.com/yourname || facebook
-  #StackOverflow: https://stackoverflow.com/yourname || stack-overflow
+  StackOverflow: https://www.zhihu.com/people/wangzhetju || stack-overflow
   #YouTube: https://youtube.com/yourname || youtube
   #Instagram: https://instagram.com/yourname || instagram
   #Skype: skype:yourname?call|chat || skype
