--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
+    "hexo-tag-abcjs": "^1.0.0",
+    "hexo-tag-aplayer": "^3.0.4",
     "hexo-wordcount": "^6.0.1"
   }
 }
