--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+  - assets/**
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -100,4 +101,3 @@ deploy:
   type: ''
 
 ## music notation
-
