--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -108,7 +108,7 @@ darkmode: true
 
 auto_excerpt:
   enable: true
-  length: 150
+  length: 80
 
 # ---------------------------------------------------------------
 # Menu Settings
@@ -148,7 +148,7 @@ sidebar:
   # Manual define the sidebar width. If commented, will be default for:
   # Muse | Mist: 320
   # Pisces | Gemini: 240
-  #width: 300
+  # width: 300
 
   # Sidebar Display (only for Muse | Mist), available values:
   #  - post    expand on posts automatically. Default.
@@ -361,7 +361,7 @@ codeblock:
   highlight_theme: normal
   # Add copy button on codeblock
   copy_button:
-    enable: false
+    enable: true
     # Show text copy result.
     show_result: false
     # Available values: default | flat | mac
