--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -125,6 +125,7 @@ menu:
   Tags: /tags/ || tags
   Categories: /categories/ || th
   Archives: /archives/ || archive
+  Arts: /arts/ || microchip 
   #schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
   #commonweal: /404/ || heartbeat
