--- a/themes/next/package.json
+++ b/themes/next/package.json
@@ -34,6 +34,7 @@
     "node": ">=10.9.0"
   },
   "dependencies": {
+    "hexo-excerpt": "^1.1.6",
     "hexo-generator-searchdb": "^1.2.0",
     "hexo-symbols-count-time": "^0.7.1"
   }
