--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
+    "hexo-symbols-count-time": "^0.7.1",
     "hexo-tag-cloud": "^2.1.2",
     "hexo-tag-scripture": "^1.0.1",
     "hexo-wordcount": "^6.0.1"
