add preview google analytics"

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -682,7 +682,7 @@ google_analytics:
   tracking_id: UA-66629043-1 # <app_id>
   # By default, NexT will load an external gtag.js script on your site.
   # If you only need the pageview feature, set the following option to true to get a better performance.
-  only_pageview: false
+  only_pageview: true
 
 # Baidu Analytics
 baidu_analytics: # <app_id>
