--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -663,8 +663,8 @@ gitalk:
 # Star rating support to each article.
 # To get your ID visit https://widgetpack.com
 rating:
-  enable: false
-  id:     # <app_id>
+  enable: true
+  id: 30061
   color:  fc6423
 
 # AddThis Share. See: https://www.addthis.com
