update name and icon

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -172,7 +172,8 @@ sidebar:
 # Sidebar Avatar
 avatar:
   # Replace the default image and set the url here.
-  url: /images/lambda.jpeg
+  # url: /images/lambda.jpeg
+  url: /images/funcoder.jpg
   # If true, the avatar will be dispalyed in circle.
   rounded: false
   # If true, the avatar will be rotated with the cursor.
