update name and icon

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Zhe
-subtitle: 'Unstable Correlation'
-description: 'Things are correlated'
+title: FunCoder
+subtitle: 'FunCoder'
+description: 'Youtube / 小红书 / 知乎 同名'
 keywords:
 author: Zhe
 language: en
