update name and icon

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: FunCoder
 subtitle: 'FunCoder'
 description: 'Youtube / 小红书 / 知乎 同名'
 keywords:
-author: Zhe
+author: FunCoder 
 language: en
 timezone: 'UTC'
 
