--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -165,6 +165,7 @@ links_settings:
 
 links:
   #Title: https://example.com
+  圣经盐读: https://wangzhe3224.github.io/Jesus_is_Lord/
 
 # Table of Contents in the Sidebar
 # Front-matter variable (nonsupport wrap expand_all).
