--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:18
+      - image: cimg/node:20.7.0
     steps:
       - checkout
       - run:
@@ -30,7 +30,7 @@ jobs:
             - "*"
   deploy:
     docker:
-      - image: circleci/node:18
+      - image: cimg/node:20.7.0
     steps:
       - checkout
       - run:
