--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -178,6 +178,7 @@ links_settings:
 
 links:
   转码路线图: https://wangzhe3224.github.io/zhuan-ma/
+  SystematicTrading: https://wangzhe3224.github.io/awesome-systematic-trading/
   FunCoder: https://funcoder.net/
   BitcoinPro: https://wangzhe3224.github.io/bitcoin-pro/
   QuantRoadmap: https://wangzhe3224.github.io/quant-roadmap/
