--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -156,12 +156,13 @@ site_state: true
 # Value before `||` delimiter is the target permalink, value after `||` delimiter is the name of Font Awesome icon.
 social:
   GitHub: https://github.com/wangzhe3224 || fab fa-github
+  YouTube: https://www.youtube.com/channel/UCewwgakV1SB1IKu8305Hgsg || fab fa-youtube
+  知乎: https://www.zhihu.com/people/wangzhetju || fab fa-twitter
   #E-Mail: mailto:yourname@gmail.com || fa fa-envelope
   #Weibo: https://weibo.com/yourname || fab fa-weibo
   #Twitter: https://twitter.com/yourname || fab fa-twitter
   #FB Page: https://www.facebook.com/yourname || fab fa-facebook
   #StackOverflow: https://stackoverflow.com/yourname || fab fa-stack-overflow
-  #YouTube: https://youtube.com/yourname || fab fa-youtube
   #Instagram: https://instagram.com/yourname || fab fa-instagram
   #Skype: skype:yourname?call|chat || fab fa-skype
 
